Changed the HTML for the site.

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
 <head>
-    <title>Ankur</title>
+    <title>Dilip</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Ankur</a>
+                <a class="navbar-brand" href="#">Dilip Kumar Maurya</a>
             </div>
 
             <div class="collapse navbar-collapse" id="topNavBar">
