--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,7 +15,7 @@
         <!--Logo-->
             <div class="navbar-header">
 
-                <!--If space is not there then this button will help to expand-->
+                {% if user.is_authenticated %}<!--If space is not there then this button will help to expand-->
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -49,7 +49,7 @@
 
                     </li>
 
-            
+                     {% else %}
                     <li class="">
                         <a href="{% url 'login' %}">
                             <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;
@@ -68,7 +68,7 @@
                     </li>
 
                 </ul>
-                
+                {% endif %}
             </div>
 
     </div>
